fixed overflow for banner bg

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -252,6 +252,7 @@ main {
     max-height: 660px;
     @include media-max-width(800) {
       flex-direction: column-reverse;
+      overflow: hidden;
     }
 
     &__left {
